Fixed vertical align of emotes

--- a/public/css/less/room.less
+++ b/public/css/less/room.less
@@ -164,6 +164,11 @@
 						.hashtext{
 							color: #7882BF;
 						}
+						.message{
+							img{
+								vertical-align: baseline;
+							}
+						}
 					}
 				}
 				.chat-messages > .chat-message:last-child{
